crates/swc_ecma_parser/tests/errors/missing_comma_object/input.js
let obj = {a: 1 b: 2};
